# phototracks

./: .cruft.json  .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  mkdocs.yml  phototracks.py  preload.py  pyproject.toml  waypoints.geojson
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  question.md
docs/: contributing.md  reference.md
src/phototracks/: __init__.py  __main__.py  api.py  app.py  collection.py  lib.py  photo.py  server.py  track.py  version.py
tests/: test_app.py  test_collection.py  test_photo.py  test_phototracks.py  test_track.py
tests/assets/: RK_gpx_2025-01-25_0848.gpx  RK_gpx_2025-01-26_1029.gpx
